--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                 </div> <!-- end of col -->
                                 <div class="col-lg-6">
                                     <div class="text-container">
-                                        <h3>Shop[</h3>
+                                        <h3>Shop</h3>
                                         <p>Pick any outfit you love</p>
                                         <ul class="list-unstyled li-space-lg">
                                             <li class="media">
